fix(scss): add z-index property

--- a/src/Sass/Components/ErrorPage.module.scss
+++ b/src/Sass/Components/ErrorPage.module.scss
@@ -13,6 +13,7 @@
 .error {
     display: flex;
     width: 100%;
+    z-index: -1;
 
     &__title {
         font-family: 'rift', sans-serif;
