--- a/src/Sass/Components/SubNavigation.module.scss
+++ b/src/Sass/Components/SubNavigation.module.scss
@@ -5,7 +5,7 @@
     left: 50px;
     position: fixed;
     top: 105px;
-    z-index: 1000;
+    z-index: 1;
 
     &__list {
         display: flex;
